--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,5 +11,9 @@ jobs:
             - uses: actions/checkout@v4
             - name: init
               run: make init
+            - uses: actions/setup-java@v3
+              with:
+                java-version: '17'
+                distribution: 'temurin'
             - name: build
               run: make build.gradle
