--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
         branches:
           - "*"
 jobs:
-    buildgradle:
+    build:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -16,4 +16,4 @@ jobs:
                 java-version: '17'
                 distribution: 'temurin'
             - name: build
-              run: make build.gradle
+              run: make build
